[package]
name = "substratee-worker"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = "build.rs"
edition = "2018"

[dependencies]
ws 						= "0.7"
hex 					= "0.3"
log 					= "0.4"
env_logger 				= "0.7"
base58 			        = "0.1"
rust-crypto 			= "0.2"
clap 					= { version = "2.33", features = [ "yaml" ] }
lazy_static             = "1.4.0"
parking_lot             = "0.11.1"
thiserror               = "1.0"

dirs 					= "1.0.2"
serde 					= "1.0"
serde_json 				= "1.0"
serde_derive 			= "1.0"
jsonrpsee               = { version = "0.2.0", features = ["client", "ws-server", "macros"]}
async-trait             = "0.1.50"
tokio                   = { version = "1.6.1", features = ["full"] }

# ipfs
ipfs-api				= "0.11.0"
futures					= "0.3"
multihash 				= "0.8"
cid 					= "<0.3.1"
sha2 					= { version = "0.7", default-features = false }

codec           		= { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
primitive-types    		= { version = "0.9", default-features = false, features = ["codec"] }

sgx_urts				= { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types 				= { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper 		= { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

substratee-settings = { path = "../primitives/settings" }

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
branch = "master"

[dependencies.substratee-node-primitives]
path = "../primitives/node"

[dependencies.substratee-worker-primitives]
path = "../primitives/worker"

[dependencies.substratee-api-client-extensions]
path = "../primitives/api-client-extensions"

[dependencies.substratee-worker-api]
path = "rpc/client"

[dependencies.substratee-worker-rpc-server]
path = "rpc/server"

[dependencies.substratee-enclave-api]
path = "../primitives/enclave-api"

[dependencies.my-node-runtime]
git = "https://github.com/scs/substraTEE-node"
branch = "master"
package = "substratee-node-runtime"

[dependencies.sp-finality-grandpa]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "3.0.0"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "3.0.0"

[dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "3.0.0"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "3.0.0"

[dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "3.0.0"

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "3.0.0"

[dependencies.frame-support]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "3.0.0"

[dependencies.substratee-stf]
path = "../stf"

[features]
default = []
production = ['substratee-settings/production']

[dev-dependencies]
anyhow = "1.0.40"
mockall = "0.10.1"