[package]
name = "substratee-worker"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = "build.rs"
edition = "2018"

[dependencies]
ws = "0.9.1"
hex = "0.4.3"
log = "0.4"
env_logger = "0.9.0"
base58 = "0.1"
rust-crypto = "0.2"
clap = { version = "2.33", features = [ "yaml" ] }
lazy_static = "1.4.0"
parking_lot = "0.11.1"
thiserror = "1.0"
dashmap = "4.0.2"

dirs = "3.0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonrpsee = { version = "0.3.0", features = ["client", "ws-server", "macros"]}
async-trait = "0.1.50"
tokio = { version = "1.6.1", features = ["full"] }

# ipfs
ipfs-api = "0.11.0"
futures = "0.3"
multihash = "0.14.0"
cid = "0.7.0"
sha2 = { version = "0.9.5", default-features = false }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["codec"] }

sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

# local
substratee-settings = { path = "../primitives/settings" }
substratee-node-primitives = { path = "../primitives/node" }
substratee-worker-primitives = { path = "../primitives/worker" }
substratee-api-client-extensions = { path = "../primitives/api-client-extensions" }
substratee-worker-api = { path = "rpc/client" }
substratee-worker-rpc-server = { path = "rpc/server" }
substratee-enclave-api = { path = "../primitives/enclave-api" }
substratee-stf = { path = "../stf" }

# scs / integritee
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch = "master" }
my-node-runtime = { package = "integritee-node-runtime", git = "https://github.com/integritee-network/integritee-node", branch = "master" }

# Substrate dependencies
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }


[features]
default = []
production = ['substratee-settings/production']

[dev-dependencies]
anyhow = "1.0.40"
mockall = "0.10.1"