[package]
name = "ita-assets-map"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = "0.4.1"
ita-parentchain-specs = { default-features = false, path = "../parentchain-specs" }
itp-types = { default-features = false, path = "../../core-primitives/types" }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[features]
default = ["std"]

std = [
    "codec/std",
    "scale-info/std",
    "serde/std",
    "hex/std",
    "ita-parentchain-specs/std",
    "itp-types/std"
]
