[package]
name = "ita-exchange-oracle"
version = "0.8.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2018"

[features]
default = ["std"]
std = [
    "thiserror",
    "url",
    "itc-rest-client/std",
    "serde/std",
    "serde_json/std",
    "log/std",
]
sgx = [
    "thiserror_sgx",
    "url_sgx",
    "itc-rest-client/sgx",
    "sgx_tstd",
]

[dependencies]

# std dependencies
thiserror = { version = "1.0.26", optional = true }
url = { version = "2.0.0", optional = true }

# sgx dependencies
thiserror_sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3", optional = true }
url_sgx = { package = "url", git = "https://github.com/mesalock-linux/rust-url-sgx", tag = "sgx_1.1.3", optional = true }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}

# no_std dependencies
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }

# internal dependencies
itc-rest-client = { path = "../../core/rest-client", default-features = false }

