[package]
name = "ita-exchange-oracle"
version = "0.8.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2018"

[features]
default = ["std"]
std = [
    "itc-rest-client/std",
    "log/std",
    "serde/std",
    "serde_json/std",
    "thiserror",
    "url",
]
sgx = [
    "itc-rest-client/sgx",
    "sgx_tstd",
    "thiserror_sgx",
    "url_sgx",
]

[dependencies]

# std dependencies
thiserror = { version = "1.0.26", optional = true }
url = { version = "2.0.0", optional = true }

# sgx dependencies
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}
thiserror_sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3", optional = true }
url_sgx = { package = "url", git = "https://github.com/mesalock-linux/rust-url-sgx", tag = "sgx_1.1.3", optional = true }

# no_std dependencies
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# internal dependencies
itc-rest-client = { path = "../../core/rest-client", default-features = false }

