[package]
name = "ita-exchange-oracle"
version = "0.8.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2018"

[dependencies]

# std dependencies
thiserror = { version = "1.0.26", optional = true }
url = { version = "2.0.0", optional = true }

# sgx dependencies
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}
thiserror_sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3", optional = true }
url_sgx = { package = "url", git = "https://github.com/mesalock-linux/rust-url-sgx", tag = "sgx_1.1.3", optional = true }

# no_std dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
substrate-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed", tag = "v0.5.9" }

# internal dependencies
itc-rest-client = { path = "../../core/rest-client", default-features = false }
itp-enclave-metrics = { path = "../../core-primitives/enclave-metrics", default-features = false }
itp-ocall-api = { path = "../../core-primitives/ocall-api", default-features = false }

[dev-dependencies]
itp-test = { path = "../../core-primitives/test" }

[features]
default = ["std"]
std = [
    "itc-rest-client/std",
    "itp-enclave-metrics/std",
    "itp-ocall-api/std",
    "log/std",
    "serde/std",
    "serde_json/std",
    "substrate-fixed/std",
    "thiserror",
    "url",
]
sgx = [
    "itc-rest-client/sgx",
    "itp-enclave-metrics/sgx",
    "sgx_tstd",
    "thiserror_sgx",
    "url_sgx",
]
