[package]
name = "ita-parentchain-specs"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
hex-literal = "0.4.1"
itp-types = { path = "../../core-primitives/types", default-features = false }
log = { version = "0.4", default-features = false }

[features]
default = ["std"]
std = [
    "log/std",
]
