[package]
name = "ita-sgx-runtime"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# local dependencies
ita-assets-map = { path = "../assets-map", default-features = false }
itp-randomness = { path = "../../core-primitives/randomness", default-features = false }
itp-sgx-runtime-primitives = { path = "../../core-primitives/sgx-runtime-primitives", default-features = false }
pallet-guess-the-number = { default-features = false, path = "pallets/guess-the-number" }
pallet-notes = { default-features = false, path = "pallets/notes" }
pallet-parentchain = { default-features = false, path = "pallets/parentchain" }
pallet-session-proxy = { default-features = false, path = "pallets/session-proxy" }
pallet-shard-management = { default-features = false, path = "pallets/shard-management" }

# Substrate dependencies
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-assets = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

# Integritee dependencies
pallet-evm = { default-features = false, optional = true, git = "https://github.com/integritee-network/frontier.git", branch = "bar/polkadot-v0.9.42" }

[features]
default = ["std"]
# Compile the sgx-runtime with evm support.
evm = ["pallet-evm"]
sgx = [
    "itp-randomness/sgx",
]
std = [
    "codec/std",
    "scale-info/std",
    "ita-assets-map/std",
    "itp-sgx-runtime-primitives/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-assets/std",
    "pallet-evm?/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-parentchain/std",
    "pallet-notes/std",
    "pallet-session-proxy/std",
    "pallet-shard-management/std",
    "sp-api/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-version/std",
]
