[package]
name = "ita-stf"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
# crates.io
codec = { version = "3.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
derive_more = { version = "0.99.5" }
log = { version = "0.4", default-features = false }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }

# sgx deps
sgx_tstd = { branch = "master", features = ["untrusted_fs", "net", "backtrace"], git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

# local crates
ita-sgx-runtime = { optional = true, default-features = false, path = "../sgx-runtime" }
itp-hashing = { path = "../../core-primitives/hashing" }
itp-sgx-externalities = { default-features = false, path = "../../core-primitives/substrate-sgx/externalities" }
itp-stf-interface = { default-features = false, path = "../../core-primitives/stf-interface" }
itp-storage = { default-features = false, path = "../../core-primitives/storage" }
itp-types = { default-features = false, path = "../../core-primitives/types" }
itp-utils = { default-features = false, path = "../../core-primitives/utils" }
its-primitives = { default-features = false, path = "../../sidechain/primitives" }
its-state = { default-features = false, optional = true, path = "../../sidechain/state" }
sp-io = { optional = true, default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator"], path = "../../core-primitives/substrate-sgx/sp-io" }

# Substrate dependencies
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sc-keystore = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-application-crypto = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

# scs / integritee
my-node-runtime = { package = "integritee-node-runtime", optional = true, git = "https://github.com/integritee-network/integritee-node.git", branch = "master" }
pallet-parentchain = { default-features = false, git = "https://github.com/integritee-network/pallets", branch = "master" }
substrate-api-client = { optional = true, git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.28" }
substrate-client-keystore = { optional = true, git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.28" }


[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
evm = ["ita-sgx-runtime/evm"]
evm_std = [
    "evm",
    "ita-sgx-runtime/evm_std",
]
sgx = [
    "sgx_tstd",
    "ita-sgx-runtime",
    "itp-sgx-externalities/sgx",
    "its-state/sgx",
    "itp-utils/sgx",
    "sp-io/sgx",
]
std = [
    # crates.io
    "codec/std",
    "log/std",
    "rlp/std",
    # local
    "itp-sgx-externalities/std",
    "itp-stf-interface/std",
    "itp-storage/std",
    "itp-types/std",
    "itp-utils/std",
    "its-primitives/std",
    "its-state/std",
    # substrate
    "sp-core/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "frame-system/std",
    "frame-support/std",
    "sp-application-crypto/std",
    "sp-runtime/std",
    "sc-keystore",
    # scs/integritee
    "my-node-runtime",
    "pallet-parentchain/std",
    "sp-io/std",
    "substrate-api-client/std",
    "substrate-client-keystore",
]
test = []
