[package]
name = "ita-stf"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
# crates.io
codec = { version = "3.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
derive_more = { version = "0.99.5" }
log = { version = "0.4", default-features = false }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }

# sgx deps
sgx_tstd = { branch = "master", features = ["untrusted_fs", "net", "backtrace"], git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

# local crates
ita-sgx-runtime = { default-features = false, path = "../sgx-runtime" }
itp-hashing = { default-features = false, path = "../../core-primitives/hashing" }
itp-node-api = { default-features = false, path = "../../core-primitives/node-api" }
itp-node-api-metadata = { default-features = false, path = "../../core-primitives/node-api/metadata" }
itp-node-api-metadata-provider = { default-features = false, path = "../../core-primitives/node-api/metadata-provider" }
itp-sgx-externalities = { default-features = false, path = "../../core-primitives/substrate-sgx/externalities" }
itp-stf-interface = { default-features = false, path = "../../core-primitives/stf-interface" }
itp-stf-primitives = { default-features = false, path = "../../core-primitives/stf-primitives" }
itp-storage = { default-features = false, path = "../../core-primitives/storage" }
itp-types = { default-features = false, path = "../../core-primitives/types" }
itp-utils = { default-features = false, path = "../../core-primitives/utils" }
sp-io = { default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator"], path = "../../core-primitives/substrate-sgx/sp-io" }

# Substrate dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-application-crypto = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

# scs / integritee
my-node-runtime = { package = "integritee-node-runtime", optional = true, git = "https://github.com/integritee-network/integritee-node.git", branch = "polkadot-v0.9.42" }
pallet-parentchain = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-v0.9.42" }


[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
evm = ["ita-sgx-runtime/evm"]
evm_std = ["evm", "ita-sgx-runtime/evm_std"]
sgx = [
    "sgx_tstd",
    "itp-sgx-externalities/sgx",
    "itp-utils/sgx",
    "sp-io/sgx",
    "itp-node-api/sgx",
    "itp-node-api-metadata-provider/sgx",
]
std = [
    # crates.io
    "codec/std",
    "log/std",
    "rlp/std",
    # local
    "ita-sgx-runtime/std",
    "itp-hashing/std",
    "itp-sgx-externalities/std",
    "itp-stf-interface/std",
    "itp-storage/std",
    "itp-types/std",
    "itp-utils/std",
    "itp-node-api/std",
    "itp-node-api-metadata/std",
    "itp-node-api-metadata-provider/std",
    # substrate
    "sp-core/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "frame-system/std",
    "frame-support/std",
    "sp-application-crypto/std",
    "sp-runtime/std",
    # scs/integritee
    "my-node-runtime",
    "pallet-parentchain/std",
    "sp-io/std",
]
test = []
