[package]
name = "ita-stf"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
# crates.io
codec = { version = "3.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
log = { version = "0.4", default-features = false }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }

# sgx deps
sgx_tstd = { branch = "master", features = ["untrusted_fs", "net", "backtrace"], git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

# local crates
ita-parentchain-specs = { default-features = false, path = "../parentchain-specs" }
ita-sgx-runtime = { default-features = false, path = "../sgx-runtime" }
itp-hashing = { default-features = false, path = "../../core-primitives/hashing" }
itp-node-api = { default-features = false, path = "../../core-primitives/node-api" }
itp-node-api-metadata = { default-features = false, path = "../../core-primitives/node-api/metadata" }
itp-sgx-externalities = { default-features = false, path = "../../core-primitives/substrate-sgx/externalities" }
itp-sgx-runtime-primitives = { default-features = false, path = "../../core-primitives/sgx-runtime-primitives" }
itp-stf-interface = { default-features = false, path = "../../core-primitives/stf-interface" }
itp-stf-primitives = { default-features = false, path = "../../core-primitives/stf-primitives" }
itp-storage = { default-features = false, path = "../../core-primitives/storage" }
itp-types = { default-features = false, path = "../../core-primitives/types" }
itp-utils = { default-features = false, path = "../../core-primitives/utils" }
pallet-parentchain = { default-features = false, path = "../sgx-runtime/pallets/parentchain" }
sp-io = { default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator"], path = "../../core-primitives/substrate-sgx/sp-io" }

# Substrate dependencies
frame-pallet-timestamp = { package = "pallet-timestamp", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }


[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
base58 = { version = "0.2.0" }


[features]
default = ["std"]
evm = ["ita-sgx-runtime/evm"]
sgx = [
    "sgx_tstd",
    "itp-sgx-externalities/sgx",
    "sp-io/sgx",
    "itp-node-api/sgx",
]
std = [
    # crates.io
    "codec/std",
    "log/std",
    "rlp/std",
    # local
    "ita-sgx-runtime/std",
    "ita-parentchain-specs/std",
    "itp-hashing/std",
    "itp-sgx-externalities/std",
    "itp-stf-interface/std",
    "itp-storage/std",
    "itp-types/std",
    "itp-node-api/std",
    "itp-node-api-metadata/std",
    # substrate
    "sp-core/std",
    "pallet-balances/std",
    "frame-pallet-timestamp/std",
    "pallet-sudo/std",
    "frame-system/std",
    "frame-support/std",
    "sp-runtime/std",
    # scs/integritee
    "pallet-parentchain/std",
    "sp-io/std",
]
test = []
